# JARVIS-1

./: .gitignore  README.md  index.html  offline_evaluation.py  prepare_mcp.py  pyproject.toml
css/: app.css
jarvis/arm/utils/: mlp.py  torch_utils.py  transformers.py  vision.py
jarvis/assembly/: base.py  core.py  env.py  evaluate.py  marks.py
jarvis/assembly/scripts/: __init__.py  craft_agent.py  equip_agent.py  smelt_agent.py
jarvis/assets/: __init__.py  cared_items.json  colors.json  common_labels.json  memory.json  skill.json  spawn.json  tag_items.json  tasks.json
jarvis/assets/recipes/: fire_charge.json  gold_nugget_from_blasting.json  gold_nugget_from_smelting.json  iron_nugget_from_blasting.json  iron_nugget_from_smelting.json  purpur_slab.json  purpur_stairs.json  quartz_slab.json  quartz_stairs.json  red_sandstone_slab.json  red_sandstone_stairs.json  sandstone_slab.json  sandstone_stairs.json  soul_torch.json  torch.json
jarvis/global_configs/envs/: demo.yaml  jarvis.yaml  test.yaml
jarvis/mineclip/: __init__.py  base.py  clip.py  head.py  mineclip.py  pooling.py  pos_embed.py
jarvis/mineclip/utils/: __init__.py  file_utils.py  image_utils.py  mlp.py  once.py  torch_utils.py
jarvis/stark_tech/: __init__.py  entry.py  env_interface.py
jarvis/steveI/: path.py  steveI_text.py  steveI_visual.py
jarvis/utils/: __init__.py
js/: app.js
scripts/: create_mcp_patch.sh  mcp_patch.diff  patch_mcp.sh  setup_mcp.sh
submodules/mineclip/: README.md  license  requirements.txt  setup.py
submodules/minedojo/: requirements.txt
(+187 files in other folders)
